Fixed scrollbar styling - modal

--- a/index.css
+++ b/index.css
@@ -462,6 +462,14 @@ hr {
     }
 }
 
+body.modal-open {
+	overflow: auto !important;
+}
+
+body.modal-open ::-webkit-scrollbar-thumb {
+    display: none;
+}
+
 ::-webkit-scrollbar {
     width: 12px;
 }
@@ -477,9 +485,10 @@ hr {
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: #FFFFFF; 
+    background: rgba(255,255,255,1.0); 
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(255,0,0,0.4); 
+	background: rgba(255,255,255,0.5); 
 }
+
